--- a/fort.6
+++ b/fort.6
@@ -1,3 +1,5 @@
  Completed percentage of this task indicated by dots
  0---10---20---30---40---50---60---70---80---90--100
- >
+ > Completed percentage of this task indicated by dots
+ 0---10---20---30---40---50---60---70---80---90--100
+ > STOP volele 3; problem with element/detj            1 -2.26676024909788597E-004
