Added spinning wheel for busy action in lead and lead group

--- a/fort.6
+++ b/fort.6
@@ -2,4 +2,10 @@
  0---10---20---30---40---50---60---70---80---90--100
  > Completed percentage of this task indicated by dots
  0---10---20---30---40---50---60---70---80---90--100
- > STOP volele 3; problem with element/detj            1 -9.41694391246146673E-005
+ > Completed percentage of this task indicated by dots
+ 0---10---20---30---40---50---60---70---80---90--100
+ > Completed percentage of this task indicated by dots
+ 0---10---20---30---40---50---60---70---80---90--100
+ > Completed percentage of this task indicated by dots
+ 0---10---20---30---40---50---60---70---80---90--100
+ >
